# advent-of-code

./: README.md  newday
2019/: BUILD.bazel  WORKSPACE  go.mod  newday
2019/01a/src/: BUILD.bazel
2019/01b/src/: BUILD.bazel
2019/04/: small.txt
2019/08/a/: test.txt
2019/11/: small.in  small.txt
2019/12/: input.txt  small2.txt
2019/16/b/: small0.txt
2019/17/: program.txt
2019/21/a/: notes  run.txt  walk.txt
2019/22/b/: condensed.txt  shortened.txt
2019/25/: commands_prefix.txt  commands_success.txt  findall.sh  input.txt
2019/25/a/: notes.txt
2019/common/astar/: BUILD.bazel  astar.go  astar_test.go
2019/common/collections/: BUILD.bazel  stack.go  stack_test.go
2019/common/dir/: BUILD.bazel  dir.go
2019/common/intmath/: BUILD.bazel  intmath.go  intmath_test.go
2019/common/logger/: BUILD.bazel
2019/common/pos/: BUILD.bazel  pos.go  pos_test.go
2019/common/strutil/: BUILD.bazel  strutil.go  strutil_test.go
2019/common/testutils/: BUILD.bazel
2019/common/vm/: BUILD.bazel  inst.go  inst_test.go  io.go  io_test.go  ram.go  ram_test.go  vm.go  vm_test.go
2019/tpl/src/: BUILD.bazel  main.go
2020/: BUILD.bazel  WORKSPACE  go.mod  newday
2020/01/src/: BUILD.bazel  main.go
2020/02/src/: BUILD.bazel  main.go
2020/03/src/: BUILD.bazel  main.go
2020/04/src/: BUILD.bazel  main.go  main_test.go
2020/05/src/: BUILD.bazel  main.go
2020/06/src/: BUILD.bazel  main.go
2020/07/src/: BUILD.bazel  main.go
2020/08/src/: BUILD.bazel  main.go
2020/09/src/: BUILD.bazel  main.go
2020/10/src/: BUILD.bazel  main.go  main_test.go
2020/11/src/: BUILD.bazel  main.go  main_test.go
2020/12/src/: BUILD.bazel  main.go
2020/13/src/: BUILD.bazel  main.go  main_test.go
2020/14/src/: BUILD.bazel  main.go  main_test.go
2020/15/src/: BUILD.bazel  main.go
2020/16/src/: BUILD.bazel  main.go  main_test.go
2020/17/src/: BUILD.bazel  main.go
2020/18/src/: BUILD.bazel  main.go  main_test.go
2020/19/src/: BUILD.bazel  main.go  main_test.go
2020/20/src/: BUILD.bazel  main.go
2020/21/: shellfish.txt
2020/21/src/: BUILD.bazel  main.go  main_test.go
2020/22/src/: BUILD.bazel  deck.go  deck_test.go  main.go  normal.go  recursive.go
2020/23/src/: BUILD.bazel  main.go
2020/24/: small2.txt
2020/24/src/: BUILD.bazel  main.go
2020/25/src/: BUILD.bazel  main.go
2020/common/astar/: BUILD.bazel  astar.go  astar_test.go
2020/common/collections/: BUILD.bazel  stack_test.go
2020/common/dir/: BUILD.bazel  dir.go
2020/common/filereader/: BUILD.bazel  filereader.go  filereader_test.go
2020/common/intmath/: BUILD.bazel  intmath_test.go
2020/common/logger/: BUILD.bazel
2020/common/pos/: BUILD.bazel  pos.go  pos_test.go
2020/common/strutil/: BUILD.bazel  strutil.go  strutil_test.go
2020/common/testutils/: BUILD.bazel  testutils.go
2020/common/vm/: BUILD.bazel  inst.go  inst_test.go  io.go  io_test.go  ram.go  ram_test.go  vm.go  vm_test.go
2020/tpl/src/: BUILD.bazel  main.go
2021/20/src/: BUILD.bazel  main.go  main_test.go
2021/common/pos/: BUILD.bazel  pos.go  pos_test.go
2022/: BUILD.bazel  WORKSPACE  go.mod  go_repositories.bzl  newday
2022/01/src/: BUILD.bazel  main.go
2022/02/src/: BUILD.bazel  main.go
2022/03/src/: BUILD.bazel  main.go
2022/04/src/: BUILD.bazel  main.go  main_test.go
2022/05/src/: BUILD.bazel  main.go
2022/06/src/: BUILD.bazel  main.go  main_test.go
2022/07/src/: BUILD.bazel  main.go
2022/08/src/: BUILD.bazel  main.go  main_test.go
2022/09/src/: BUILD.bazel  main.go
2022/10/src/: BUILD.bazel  main.go  main_test.go
2022/11/src/: BUILD.bazel  main.go  main_test.go
2022/12/src/: BUILD.bazel  main.go  main_test.go
2022/13/src/: BUILD.bazel  main.go  main_test.go
2022/14/src/: BUILD.bazel  main.go  main_test.go
2022/15/src/: BUILD.bazel  main.go  main_test.go
2022/16/: input.dot  input_to_dot  sample.dot
2022/16/src/: BUILD.bazel  main.go  main_test.go
2022/17/src/: BUILD.bazel  main.go  main_test.go
2022/18/src/: BUILD.bazel  main.go  main_test.go
2022/19/src/: BUILD.bazel  main.go  main_test.go
2022/20/src/: BUILD.bazel  main.go  main_test.go
2022/21/src/: BUILD.bazel  main.go  main_test.go
2022/22/src/: BUILD.bazel  main.go  main_test.go
2022/23/src/: BUILD.bazel  main.go  main_test.go
2022/24/src/: BUILD.bazel  main.go  main_test.go
2022/25/src/: BUILD.bazel  main.go  main_test.go
2022/common/area/: BUILD.bazel  area.go  area_test.go
2022/common/astar/: BUILD.bazel  astar.go  astar_test.go
2022/common/collections/: BUILD.bazel  collections_test.go  priority_queue.go  stack.go  stack_test.go
2022/common/dir/: BUILD.bazel  dir.go
2022/common/filereader/: BUILD.bazel  filereader.go  filereader_test.go
2022/common/graph/: BUILD.bazel  dijkstra.go
2022/common/grid/: BUILD.bazel  grid.go  grid_test.go
2022/common/intmath/: BUILD.bazel  intmath.go  intmath_test.go
2022/common/logger/: BUILD.bazel  logger.go
2022/common/mtsmath/: BUILD.bazel  mtsmath.go  mtsmath_test.go
2022/common/pos/: BUILD.bazel  pos.go  pos_test.go
2022/common/strutil/: BUILD.bazel  strutil.go  strutil_test.go
2022/common/testutils/: BUILD.bazel  testutils.go
2022/tpl/src/: BUILD.bazel  main.go  main_test.go
2023/: BUILD.bazel  WORKSPACE  bazel-2023  bazel-bin  bazel-out  bazel-testlogs  go.mod  go_repositories.bzl  nogo.config.json
2023/01/src/: BUILD.bazel  main.go  main_test.go
2023/02/src/: BUILD.bazel  main.go  main_test.go
2023/03/py/: BUILD.bazel  main.py  solution.py  solution_test.py
2023/03/src/: BUILD.bazel  main.go  main_test.go
2023/04/src/: BUILD.bazel  main.go  main_test.go
2023/05/src/: BUILD.bazel  main.go  main_test.go
2023/06/src/: BUILD.bazel  main.go  main_test.go
2023/07/src/: BUILD.bazel  main.go  main_test.go
2023/08/src/: BUILD.bazel  main.go  main_test.go
2023/09/src/: BUILD.bazel  (+2 more)
2023/20/: input.dot
2023/24/: input.txt
2024/: BUILD.bazel  MODULE.bazel  TODO  WORKSPACE  go.mod  newday
2024/13/: input.txt
2025/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  newday
2025/09/: input.txt
2025/bzl/: common.bzl
(+1033 files in other folders)
