load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/simmonmt/aoc/2019
gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    extra_args = [
        "--mode=diff",
    ],
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    external = "vendored",
)

gazelle(name = "gazelle_cmd")
