load("@io_bazel_rules_go//go:def.bzl", "nogo")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/simmonmt/aoc/2022
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "--mode=diff",
    ],
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
)

gazelle(name = "gazelle_cmd")

nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],
    # Remove once rules_go releases after 0.37 containing 
    # bazelbuild/rules_go@de2074e. Verify that bazel-bin is created.
    tags = ["manual"],
)
