module(
    name = "advent_of_code",
    repo_name = "advent_of_code",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:nogo")

go_sdk.download(
    name = "go_sdk",
    version = "1.25.4",
)

use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# TODO: Remove when https://github.com/bazelbuild/rules_go/issues/4084 
# is resolved
go_deps.module(
    path = "golang.org/x/tools",
    # curl https://sum.golang.org/lookup/golang.org/x/tools@v0.39.0
    sum = "h1:ik4ho21kwuQln40uelmciQPp9SipgNDdrafrYA4TmQQ=",
    version = "v0.39.0",
)

go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "org_golang_x_exp",
    "org_golang_x_tools",
)
