load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "solution",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/aoc/2019/01b/src",
    visibility = ["//visibility:private"],
    deps = ["//common/logger:go_default_library"],
)
