load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["intmath.go"],
    importpath = "github.com/simmonmt/aoc/2019/common/intmath",
)

go_test(
    name = "go_default_test",
    srcs = ["intmath_test.go"],
    embed = [":go_default_library"],
    deps = ["//common/testutils:go_default_library"],
)
