load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pos.go"],
    importpath = "github.com/simmonmt/aoc/2019/common/pos",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["pos_test.go"],
    embed = [":go_default_library"],
)
