load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["strutil.go"],
    importpath = "github.com/simmonmt/aoc/2019/common/strutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["strutil_test.go"],
    embed = [":go_default_library"],
)
