load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "solution",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/aoc/2020/17/src",
    visibility = ["//visibility:private"],
    deps = [
        "//17/src/board",
        "//common/filereader",
        "//common/logger",
        "//common/pos",
    ],
)
