load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "solution",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/aoc/2020/18/src",
    visibility = ["//visibility:private"],
    deps = [
        "//18/src/parse",
        "//common/filereader",
        "//common/logger",
    ],
)

go_test(
    name = "src_test",
    srcs = ["main_test.go"],
    embed = [":src_lib"],
    deps = [
        "//18/src/parse",
        "//common/logger",
    ],
)
