load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "astar",
    srcs = ["astar.go"],
    importpath = "github.com/simmonmt/aoc/2020/common/astar",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "//vendor/github.com/google/btree",
    ],
)

go_test(
    name = "astar_test",
    srcs = ["astar_test.go"],
    embed = [":astar"],
    deps = [
        "//common/logger",
    ],
)
