load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["filereader.go"],
    importpath = "github.com/simmonmt/aoc/2020/common/filereader",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["filereader_test.go"],
    embed = [":go_default_library"],
)
