load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = [
        "inst.go",
        "io.go",
        "ram.go",
        "vm.go",
    ],
    importpath = "github.com/simmonmt/aoc/2020/common/vm",
    deps = ["//common/logger:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "inst_test.go",
        "io_test.go",
        "ram_test.go",
        "vm_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common/logger:go_default_library",
        "//common/testutils:go_default_library",
    ],
)
