load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "solution",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/simmonmt/aoc/2021/20/src",
    visibility = ["//visibility:private"],
    deps = [
        "//common/filereader",
        "//common/intmath",
        "//common/logger",
        "//common/pos",
    ],
)

go_test(
    name = "src_test",
    srcs = ["main_test.go"],
    embed = [":src_lib"],
    deps = [
        "//common/logger",
    ],
)
