load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pos",
    srcs = ["pos.go"],
    importpath = "github.com/simmonmt/aoc/2021/common/pos",
    visibility = ["//visibility:public"],
    deps = ["//common/intmath"],
)

go_test(
    name = "pos_test",
    srcs = ["pos_test.go"],
    embed = [":pos"],
)
